--- a/css/twentyseventeen-includes-astaliftlandingpage.css
+++ b/css/twentyseventeen-includes-astaliftlandingpage.css
@@ -250,7 +250,9 @@ p {
   left: 0;
   border-bottom: 7px solid #ffffff;
   padding-bottom: 65px;
+ 
 }
+ 
 
 
 .header-button-text {
@@ -259,6 +261,9 @@ p {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.2;
+}
+.header-button-text:active {
+text-decoration: none;
 }
 .header-button-text:hover{
   text-decoration: none !important;
@@ -2212,10 +2217,7 @@ and (max-device-width : 480px) {
     font-size: 24px;
   }
 
-  .section-form-cta-button-container {
-    margin-top: 20px;
-    margin-bottom: 16px;
-  }
+ 
 
   .section-form-cta-button {
     font-size: 20px;
