--- a/css/twentyseventeen-includes-astaliftlandingpage.css
+++ b/css/twentyseventeen-includes-astaliftlandingpage.css
@@ -964,6 +964,7 @@ text-decoration: none;
 
 .product-selection-item-details-container .button-primary {
   width: 60%;
+  height: 66px;
 }
 
 .product-selection-item-details-container.right .button-primary {
@@ -1460,6 +1461,13 @@ text-decoration: none;
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
+  .font-s-32{
+    font-size: 32px;
+  }
+  .section-prod-comparison-title{
+    font-size: 74px !important;
+    font-weight: 400;
+  }
   #nav{
     height: 100px;
   }
@@ -1476,21 +1484,23 @@ and (max-device-width : 480px) {
     font-size: 30px !important;
   }
   p{
-    font-size: 27px !important;
+    font-size: 32px !important;
      
   }
   .text-h1{
     margin-top: 70px;
-    margin-bottom: 70px;
   }
   .prod-details-container{
     height: 60%;
   }
   .steps-content-text{
-    width: 600px;
+    width: 644px;
   }
   .product-selection-item-details-feature-container{
     margin-top: 150px;
+  }
+  .banner-text-container{
+    margin-bottom: 197px;
   }
   .section-review-item-content-text{
     font-size: 32px !important;
@@ -1505,12 +1515,44 @@ and (max-device-width : 480px) {
     margin: 155px;
     
   }
-  .button-primary{
+  .prod-details-features-content {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .prod-details-other-features-title{
+    font-size: 70px !important;
+  }
+  .section-product-selection-title{
+  font-size: 70px !important;
+  margin-top: 50px;
+  margin-bottom: 70px;
+  }
+  .product-selection-item-details-feature-title {
+  font-weight: 400;
+  font-size: 42px !important;
+
+  }
+ .steps{
+   margin-bottom: 0px;
+ }
+ .sbha-button{
+   border-radius: 50px;
+   height: 100px;
+   font-size: 37px !important;
+ }
+
+  .prod-details-item-title{
+    margin-top: 50px;
+    font-size: 58px !important;
+  }
+  /* .button-primary{
     font-size: 30px;
     padding: 28px;
     margin-top: 50px;
     margin-bottom: 50px;
-  }
+  } */
   .section-form-cta-input{
     width: 100%;
    height: 60px;
@@ -1518,18 +1560,18 @@ and (max-device-width : 480px) {
    margin-bottom: 10px;
   }
   .section-form-cta-button{
-    width: 70%;
-    font-size: 24px;
-    line-height: 1.2;
+    
+    font-size: 32px !important;
+    
     font-weight: 300;
-    padding: 10px;
+    padding-left: 20px;
   }
   .prod-details-features-wrapper{
     margin-top: 270px;
   }
   .banner-text-subtitle,  .banner-text-secondary-subtitle {
     
-    font-size: 42px !important;
+    font-size: 52px !important;
   }
   .banner-text-content {
   font-size: 38px !important;
@@ -1537,6 +1579,15 @@ and (max-device-width : 480px) {
   .duv-clear-text-highlight-image {
     height: 214%;
   }
+  .banner-text-button{
+    font-size: 40px;
+    /* font-weight: 100; */
+    width: 313px;
+    height: 94px;
+    border-radius: 50px;
+    margin-bottom: 50px;
+  }
+  
   .banner-social-button {
     width: 80px;
     height: 80px;
@@ -1570,7 +1621,8 @@ and (max-device-width : 480px) {
     width: 100%;
     height: 733px;
     object-fit: cover;
-    margin-top: -35px;
+    object-position: left;
+    margin-top: 1px;
   }
   .banner-img-small {
     display: none;
@@ -1581,9 +1633,7 @@ and (max-device-width : 480px) {
   .product-selection-item-details-image-small{
     width: 269px;
   }
-  p{
-    margin-bottom: 0rem !important;
-  }
+ 
 }
 
 @media (min-width: 1024px) {
