--- a/css/twentyseventeen-includes-astaliftlandingpage.css
+++ b/css/twentyseventeen-includes-astaliftlandingpage.css
@@ -1465,6 +1465,13 @@ and (max-device-width : 480px) {
     font-size: 74px !important;
     font-weight: 400;
   }
+  .section-form-cta-footer-policy{
+    font-size: 24px !important;
+    width: 110%;
+    margin-top: 20px;
+    margin-left: -10px;
+    
+  }
   #nav{
     height: 100px;
   }
@@ -1483,6 +1490,47 @@ and (max-device-width : 480px) {
   p{
     font-size: 32px !important;
      
+  }
+  .section-review-item-content-image-container {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: 0;
+  }
+  .section-review-item-content-image-wrapper{
+    display: none;
+  }
+  .section-review-item-content-image-video-wrapper{
+    display: none;
+  }
+  .section-review-item-content-image-backdrop{
+    display: none;
+  }
+  .section-review-item-content-image{
+    
+  }
+  .product-selection-item-details-container{
+    margin-top: 300px;
+    margin-bottom: 100px;
+  }
+  .product-selection-item-details-image-small{
+    top:-600px;
+    left: 160px;
+    width: 400px !important;
+  }
+  .product-selection-item-details-feature-title{
+    font-size: 45px !important;
+    font-weight: 700 !important;
+    width: 80%;
+  }
+  .product-selection-item-details-feature-content{
+    font-size: 42px !important;
+    font-weight: 100;
+  }
+  .product-selection-item-details-feature-wrapper{
+    margin-top: 140px;
+    margin-bottom: 100px;
   }
   .text-h1{
     margin-top: 70px;
@@ -1512,6 +1560,17 @@ and (max-device-width : 480px) {
     margin: 155px;
     
   }
+  .section-review-item-content-text{
+    margin-top: 50px;
+  }
+  .faq-question{
+    font-size: 35px !important;
+    font-weight: 400;
+    height: 120px;
+  }
+ .faq-container{
+   margin-bottom: 30px;
+ }
   .prod-details-features-content {
     margin-top: 50px;
     margin-bottom: 50px;
@@ -1532,13 +1591,14 @@ and (max-device-width : 480px) {
 
   }
  .steps{
-   margin-bottom: 0rem !important;
-   margin-top: 15px !important;
+    
  }
  .sbha-button{
-   border-radius: 50px;
-   height: 100px;
-   font-size: 37px !important;
+  border-radius: 50px;
+    height: 85px;
+    font-size: 37px !important;
+    width: 350px;
+    margin-bottom: 60px;
  }
 
   .prod-details-item-title{
