--- a/css/twentyseventeen-includes-astaliftlandingpage.css
+++ b/css/twentyseventeen-includes-astaliftlandingpage.css
@@ -1498,7 +1498,10 @@ and (max-device-width : 480px) {
     justify-content: center;
     margin-left: 0;
   }
- 
+ .prod-related-products-item-title{
+   font-size: 43px !important;
+   margin-bottom: 20px;
+ }
   .product-selection-item-details-container{
     margin-top: 300px;
     margin-bottom: 100px;
